# LingChat

./: .env  .env.example  .env.example.docker  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Develop.md  Dockerfile  Dockerfile-nginx  Dockerfile-node  Dockerfile-predictor  Dockerfile-python  LICENSE  README-help.md  README.md  ROADMAP.md  app.spec  build.py  desk_pet.bat  docker-compose.golang.yml  docker-compose.yml  env.md  environment.yaml  main.cpp  main.py  package-lock.json  progress.md  pyproject.toml  python_server.py  requirements.txt  server.js  start-new.bat  start.bat  start.docker.bat  start.windows.bat  可以向deepseek快速提问项目的奇妙小工具.py
.github/workflows/: release-push.yml  test-windows.yml  test-with-conda.yml  test-with-uv.yml
Demo/NeoChat/: .gitignore  LICENSE  README.md  config.py  config.yaml  game_engine.py  llm_interface.py  main.py  pyproject.toml  qidong.py  requirements.txt  剧情创作指南.md  提问工具.py
Demo/desktop_pet/: config.py  desktop_pet.py  pet_window.py
Demo/epu-api/: README.md  app.py  config.yaml.example  requirements.txt
Demo/main_page_demo/: index.html  主界面demo.md
Demo/myh_api/: app.py  config.yaml  requirements.txt
backend/: .env.example  README.md  VitsTTS.py  deepseek.py  install.bat  langDetect.py  logger.py  predictor.py  predictor_server.py  requirements.txt  run.bat  webChat.docker.py  webChat.exe.py  webChat.py  webChat.windows.py  webChat2.py  windows_main.py
backend/api/: chat_background.py  chat_character.py  chat_history.py  chat_info.py  chat_main.py  chat_music.py  chat_sound.py  env_config.py  frontend_routes.py  routes_manager.py
backend/core/: RAG.py  README.md  VitsTTS.py  __init__.py  ai_service.py  deepseek.py  dialog_logger.py  frontend_manager.py  langDetect.py  logger.py  memory_client.py  memory_mcp.py  memory_rag_mcp.py  new_logger.py  pic_analyzer.py  predictor.py  server.py  service_manager.py  websocket_server.py
backend/database/: __init__.py  character_model.py  chat_system.db  conversation_model.py  database.py  model.py  test.py  test_user.py  user_model.py
backend/desktop_pet/: api_workers.py  config.py  desktop_pet.py  logger.py
backend/emotion_model_12emo/: config.json  label_mapping.json
backend/go-impl/: .env.example  Dockerfile  README.md  go.mod  go.sum  openapi.yaml
backend/test/: config_dict.py  embedding_test.py  vector_init_test.py
backend/utils/: easter_egg.py  function.py
docs/: Clone后修复指南.md  DIY人物教程.md  Style-Bert-VITS2模型训练教程.md  TODOS.md  Vits教程.md  开发文档.md  源代码使用.md
frontend/: README.md  nginx.conf  package-lock.json  package.json  pyqtweb.py  server.js  开发文档.md
frontend/server/: app.js
frontend_vite/: index.html  package.json  vite.config.ts
frontend_vue/: backend.cmd  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend_vue/src/: App.vue  main.ts
game_data/resources/: 预设人设.txt
ling_chat/: __main__.py  main.py
ling_chat/api/: app_server.py  chat_audio.py  chat_background.py  chat_character.py  chat_history.py  chat_info.py  chat_main.py  chat_music.py  chat_sound.py  env_config.py  frontend_routes.py  new_chat_main.py  routes_manager.py
ling_chat/core/: RAG.py  VitsTTS.py  ai_service.py  deepseek.py  logger.py  memory_client.py  memory_mcp.py  pic_analyzer.py  predictor.py  service_manager.py  webview.py
ling_chat/database/: __init__.py  character_model.py  conversation_model.py  database.py  test.py  test_user.py  user_model.py
ling_chat/desktop_pet/: ui_components.py
ling_chat/static/: .gitignore
ling_chat/utils/: cli.py  cli_parser.py  easter_egg.py  function.py  load_env.py  runtime_path.py  voice_check.py
logs/: log转json.py
others/: README.md  logger_new.py  process.py  project_summary.md
others/docker相关（过时代码）/: .env.example.docker  Dockerfile-predictor  Dockerfile-python  docker-compose.golang.yml  docker-compose.yml  start.docker.bat
others/document/: AI-Galgame 剧情创作指南.md  Q&A.md  TODOS.md  开发文档.md  手机使用教程.md  源代码使用.md
others/frontend_vite/: index.html
others/memory_rag/: memory_client.py
others/release/: README.md  build.py
others/试验性：PYQT实现前段/: pyqtgame.py
public/css/: menu.css  styles.css
public/js/: animeText.js  emotion.js  image.js  menu.js  sound.js  starParticle.js  talk.js
py_ling_chat/: main.py
py_ling_chat/api/: chat_character.py  chat_history.py  chat_info.py  chat_main.py  frontend_routes.py
py_ling_chat/core/: RAG.py  VitsTTS.py  ai_service.py  deepseek.py  logger.py  memory_client.py  memory_mcp.py  pic_analyzer.py  predictor.py  service_manager.py
py_ling_chat/database/: test.py  (+5 more)
scripts/: start.py
tests/: config_dict.py  test.py  test_env_config.py  test_function.py  vector_init_test.py
(+592 files in other folders)
