[project]
name = "ling-chat"
version = "0.3.0"
description = "" # 可选，从 [tool.poetry] 复制过来
authors = [
    { name = "0x00-pl", email = "0x00.pl@gmail.com" },
]
# 添加或修改这一行，允许 Python 3.14
requires-python = ">=3.14,<3.15" # 确保包含 3.14，如果你知道未来版本也能用，可以改为 `>=3.14`

[tool.poetry]
name = "ling-chat"
version = "0.3.0"
description = ""
authors = ["0x00-pl <0x00.pl@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
# 修改这一行，允许 Python 3.14
python = "^3.14" # 或者 "^3.10" 但要确保它兼容 3.14。通常直接写目标版本更明确。
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
requests = "^2.32.4"
aiohttp = "^3.12.11"
transformers = "^4.52.4"
pywebview = "^5.4"
openai = "^1.85.0"
platformdirs = "^4.3.8"
python-multipart = "^0.0.20"
websockets = "^15.0.1"
mcp = "^1.9.4"
fastmcp = "^2.9.0"
mss = "^10.0.0"
google-generativeai = "^0.8.5"
py7zr = "^1.0.0"
poetry-core = "^2.1.3" # 这个是构建系统依赖，通常由 Poetry 管理
torch = {version = "^2.5.1", source = "torchcpu"}
sentence-transformers = "^5.0.0"
chromadb = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"