[project]
name = "ling-chat"
version = "0.4.0beta1"
description = ""
authors = [
    { name = "0x00-pl", email = "0x00.pl@gmail.com" },
]
requires-python = ">=3.10,<3.15"

[tool.poetry]
name = "ling-chat"
version = "0.4.0beta1"
description = ""
authors = ["0x00-pl <0x00.pl@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
requests = "^2.32.4"
aiohttp = "^3.12.11"
transformers = "^4.52.4"
pywebview = "^5.4"
openai = "^1.85.0"
platformdirs = "^4.3.8"
python-multipart = "^0.0.20"
websockets = "^15.0.1"
mcp = "^1.9.4"
fastmcp = "^2.9.0"
mss = "^10.0.0"
google-generativeai = "^0.8.5"
py7zr = "^1.0.0"
poetry-core = "^2.1.3"
torch = {version = "^2.5.1", source = "torchcpu"}
sentence-transformers = "^5.0.0"
chromadb = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"